--- a/demo/src/main/resources/com/example/demo/MainView.fxml
+++ b/demo/src/main/resources/com/example/demo/MainView.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.SubScene?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -67,33 +61,7 @@
       </VBox>
       <StackPane layoutX="168.0" layoutY="-2.0" prefHeight="400.0" prefWidth="433.0">
          <children>
-            <Pane fx:id="pnlSettings" prefHeight="312.0" prefWidth="378.0">
-               <children>
-                  <Label layoutX="19.0" layoutY="27.0" text="Host:" />
-                  <TextField fx:id="hostField" layoutX="134.0" layoutY="23.0" prefHeight="25.0" prefWidth="120.0" text="fcappenzell.ch" />
-                  <Label layoutX="20.0" layoutY="58.0" text="Port:" />
-                  <TextField fx:id="portField" layoutX="194.0" layoutY="53.0" prefHeight="25.0" prefWidth="60.0" text="21" />
-                  <Label layoutX="25.0" layoutY="90.0" text="Login:">
-                     <padding>
-                        <Insets right="10.0" />
-                     </padding>
-                  </Label>
-                  <TextField fx:id="loginField" layoutX="144.0" layoutY="86.0" prefHeight="25.0" prefWidth="110.0" text="gruempeli" />
-                  <PasswordField fx:id="passwordField" layoutX="144.0" layoutY="117.0" prefWidth="110.0" text="IVirE3oitQnu7KFxAP36erF7R6G61oa88U5a80xV" />
-                  <Button fx:id="connectButton" layoutX="192.0" layoutY="149.0" mnemonicParsing="false" text="Connect" />
-                  <Label layoutX="19.0" layoutY="6.0" text="FTP Connection" />
-                  <Label layoutX="25.0" layoutY="122.0" text="Password:">
-                     <padding>
-                        <Insets right="10.0" />
-                     </padding>
-                  </Label>
-                  <SubScene fx:id="view1" height="200.0" layoutX="68.0" layoutY="149.0" width="200.0">
-                    <root>
-                      <Region />
-                    </root>
-                  </SubScene>
-               </children>
-            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" />
          </children>
       </StackPane>
    </children>
