--- a/demojava/src/main/resources/com/example/demojava/Gameplan.fxml
+++ b/demojava/src/main/resources/com/example/demojava/Gameplan.fxml
@@ -6,9 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<Pane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.demo.Overview"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+            fx:controller="com.example.demojava.controllers.Gameplan">
+</Pane>
